SOFT-90 Disabled several options from CMakeLists.txt that are not needed for the regular SOFT5 build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,22 @@ cmake_minimum_required(VERSION 3.2)
 include(CPack)
 project(soft5)
 
-option (WITH_WEB "Compile with Web support"               ON)
-option (WITH_HSM "Compile with HSM plugin"                ON)
-option (WITH_STORAGE_HD5 "HDF5 storage support"           ON)
+option (WITH_WEB "Compile with Web support"               OFF)
+option (WITH_HSM "Compile with HSM plugin"                OFF)
+option (WITH_STORAGE_HD5 "HDF5 storage support"           OFF)
 option (WITH_STORAGE_MONGO "MongoDB storage support"      ON)
 option (WITH_STORAGE_JSON "JSON storage support"          ON)
 option (WITH_STORAGE_EXTERNAL "External storage support"  ON)
-option (WITH_PLUGIN_GSL "Compile GSL plugin"              ON)
-option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          ON)
-option (WITH_PLUGIN_HD5 "Compile HD5 plugin"              ON)
-option (WITH_PLUGIN_MONGO "Compile HD5 plugin"            ON)
+option (WITH_PLUGIN_GSL "Compile GSL plugin"              OFF)
+option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          OFF)
+option (WITH_PLUGIN_HD5 "Compile HDF5 plugin"             OFF)
+option (WITH_PLUGIN_MONGO "Compile MongoDB plugin"        OFF)
 option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   ON)
 option (WITH_FOREIGN_C "Compile with C API"               ON)
 option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
-option (WITH_NUMERICS "Compile with SOFT Numerics"        ON)
+option (WITH_NUMERICS "Compile with SOFT Numerics"        OFF)
 option (USE_PYTHON3 "Create Python 3 bindings instead of Python 2" OFF)
-#option (WITH_FOREIGN_HASKELL "Compile with Haskell API" OFF)
 option (WITH_TESTS "Compile tests"                        ON)
 option (WITH_PORTO "Compile porto plugins"                ON)
 
@@ -216,10 +215,6 @@ if (WITH_FOREIGN_PYTHON)
     add_subdirectory(foreign/python/test/softpy)
   endif (WITH_TESTS)
 endif (WITH_FOREIGN_PYTHON)
-
-if (WITH_FOREIGN_HASKELL)
-  message("Haskell is currently not supported")
-endif (WITH_FOREIGN_HASKELL)
 
 if (WITH_NUMERICS)
   add_subdirectory(numerics/src/sim)
