SOFT-90 Added the function definition for add_forge to the main CMakeLists.txt file

--- a/core/test/kernel/entities/CMakeLists.txt
+++ b/core/test/kernel/entities/CMakeLists.txt
@@ -4,24 +4,6 @@ set (CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set (SRC_LIST ${SRC_LIST})
 
-# Run a json entity through the soft-forge code generator to create
-# a header and source file
-function (add_forge entity output_src output_hdr)
-#  message("outp: ${entity} ${output_src} ${output_hdr}")
-  add_custom_command(
-    OUTPUT ${output_hdr}
-    COMMAND soft-forge ${entity} ${C_HEADER_TEMPLATE} ${output_hdr}
-    DEPENDS ${entity} ${C_HEADER_TEMPLATE}
-    )
-
-  add_custom_command(
-    OUTPUT ${output_src}
-    COMMAND soft-forge ${entity} ${C_SOURCE_TEMPLATE} ${output_src}
-    DEPENDS ${entity} ${C_SOURCE_TEMPLATE} ${output_hdr}
-    )
-endfunction()
-
-
 # Find all .json files in current source dir and run through
 # soft-forge
 FILE(GLOB json-sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.json)
@@ -31,8 +13,8 @@ foreach(JSON_SRC ${json-sources})
   string(REGEX REPLACE "\.json$" ".h" GEN_HDR ${JSON_SRC})
 #  message("${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC} - ${GEN_SRC}")
   add_forge(${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}
-    ${test-entities_BINARY_DIR}/${GEN_SRC}
-    ${test-entities_BINARY_DIR}/${GEN_HDR})
+    ${C_SOURCE_TEMPLATE} ${test-entities_BINARY_DIR}/${GEN_SRC}
+    ${C_HEADER_TEMPLATE} ${test-entities_BINARY_DIR}/${GEN_HDR})
 
   list(APPEND SRC_LIST ${GEN_SRC})
   list(APPEND ENTITY_LIST ${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC})
