--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
 option (WITH_NUMERICS "Compile with SOFT Numerics"        OFF)
 option (USE_PYTHON3 "Create Python 3 bindings instead of Python 2" OFF)
 option (WITH_TESTS "Compile tests"                        ON)
-option (WITH_PORTO "Compile porto plugins"                ON)
+option (WITH_PORTO "Compile porto plugins"                OFF)
 
 set (SOFT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -112,6 +112,32 @@ set (SCRIPT_PLUGINS_INSTALL_DIR ${SOFTBASE}/plugins)
 set (SIMUDF_PLUGINS_DIR ${SOFTBASE}/udf)
 set (INCLUDE_INSTALL_DIR include/${PROJECT_NAME})
 
+#####################
+# add_forge 
+# TODO: To be moved to a separate file later
+#####################
+
+# Run a json entity through the soft-forge code generator to create
+# a header and source file
+function (add_forge entity template_src output_src template_hdr output_hdr)
+
+  # Note: To force the softshell to be run with the SOFT_MODULES environment variable, CMake has to be invoked
+  #       as a wrapper to the softshell application, using the -E switch.
+  # Note: Dependencies are set up to softshell so that the build order is conserved even when running with a
+  #       multi-processor build such as make -j. This ensures that softshell is built before being attempted
+  #       run by the forge command.
+  add_custom_command(
+    OUTPUT ${output_hdr}
+    COMMAND ${CMAKE_COMMAND} -E env "SOFT_MODULES=${softshell_MODULES_DIR}" ${softshell_APP} ${soft-forge_APP} ${entity} ${template_hdr} ${output_hdr}
+    DEPENDS ${entity} ${C_HEADER_TEMPLATE} softshell
+    )
+
+  add_custom_command(
+    OUTPUT ${output_src}
+    COMMAND ${CMAKE_COMMAND} -E env "SOFT_MODULES=${softshell_MODULES_DIR}" ${softshell_APP} ${soft-forge_APP} ${entity} ${template_src} ${output_src}
+    DEPENDS ${entity} ${C_SOURCE_TEMPLATE} ${output_hdr} softshell
+    )
+endfunction()
 
 ######################
 # Add subdirectories
@@ -123,6 +149,8 @@ add_subdirectory(core/src/kernel)
 if (WITH_FOREIGN_C)
   add_subdirectory(foreign/c/src/softc)
 endif (WITH_FOREIGN_C)
+
+add_subdirectory(tools/src/softshell)
 
 # Storage
 if (WITH_STORAGE_HD5)
@@ -157,7 +185,6 @@ if (WITH_STORAGE_EXTERNAL)
 endif (WITH_STORAGE_EXTERNAL)
 
 # Tools
-add_subdirectory(tools/src/softshell)
 if (WITH_PLUGIN_MONGO)
   add_subdirectory(tools/src/plugins/mongo)
 endif (WITH_PLUGIN_MONGO)
