--- a/storage/test/plugins/external/entities/CMakeLists.txt
+++ b/storage/test/plugins/external/entities/CMakeLists.txt
@@ -4,23 +4,6 @@ set (CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set (SRC_LIST ${SRC_LIST})
 
-# Run a json entity through the soft-forge code generator to create
-# a header and source file
-function (add_forge entity output_src output_hdr)
-  add_custom_command(
-    OUTPUT ${output_hdr}
-    COMMAND soft-forge ${entity} ${C_HEADER_TEMPLATE} ${output_hdr}
-    DEPENDS ${entity} ${C_HEADER_TEMPLATE}
-    )
-
-  add_custom_command(
-    OUTPUT ${output_src}
-    COMMAND soft-forge ${entity} ${C_SOURCE_TEMPLATE} ${output_src}
-    DEPENDS ${entity} ${C_SOURCE_TEMPLATE} ${output_hdr}
-    )
-endfunction()
-
-
 # Find all .json files in current source dir and run through
 # soft-forge
 FILE(GLOB json-sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.json)
@@ -28,8 +11,8 @@ foreach(JSON_SRC ${json-sources})
   string(REGEX REPLACE "\.json$" ".c" GEN_SRC ${JSON_SRC})
   string(REGEX REPLACE "\.json$" ".h" GEN_HDR ${JSON_SRC})
   add_forge(${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}
-    ${plot-entities_BINARY_DIR}/${GEN_SRC}
-    ${plot-entities_BINARY_DIR}/${GEN_HDR})
+    ${C_SOURCE_TEMPLATE} ${plot-entities_BINARY_DIR}/${GEN_SRC}
+    ${C_HEADER_TEMPLATE} ${plot-entities_BINARY_DIR}/${GEN_HDR})
 
   list(APPEND SRC_LIST ${GEN_SRC})  
 endforeach(JSON_SRC ${json-sources})
