SOFT-90 Added further dependency descriptions. Re-organized CMakeLists.txt slightly. Exported the add_forge function to a separate .cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,23 +2,23 @@ cmake_minimum_required(VERSION 3.2)
 include(CPack)
 project(soft5)
 
-option (WITH_WEB "Compile with Web support"               OFF)
-option (WITH_HSM "Compile with HSM plugin"                OFF)
-option (WITH_STORAGE_HD5 "HDF5 storage support"           OFF)
 option (WITH_STORAGE_MONGO "MongoDB storage support"      ON)
 option (WITH_STORAGE_JSON "JSON storage support"          ON)
 option (WITH_STORAGE_EXTERNAL "External storage support"  ON)
+option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   ON)
+option (WITH_FOREIGN_C "Compile with C API"               ON)
+option (WITH_TESTS "Compile tests"                        ON)
+option (WITH_WEB "Compile with Web support"               OFF)
+option (WITH_HSM "Compile with HSM plugin"                OFF)
+option (WITH_STORAGE_HD5 "HDF5 storage support"           OFF)
 option (WITH_PLUGIN_GSL "Compile GSL plugin"              OFF)
 option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          OFF)
 option (WITH_PLUGIN_HD5 "Compile HDF5 plugin"             OFF)
 option (WITH_PLUGIN_MONGO "Compile MongoDB plugin"        OFF)
-option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   ON)
-option (WITH_FOREIGN_C "Compile with C API"               ON)
 option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
 option (WITH_NUMERICS "Compile with SOFT Numerics"        OFF)
 option (USE_PYTHON3 "Create Python 3 bindings instead of Python 2" OFF)
-option (WITH_TESTS "Compile tests"                        ON)
 option (WITH_PORTO "Compile porto plugins"                OFF)
 
 set (SOFT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
@@ -39,8 +39,8 @@ endif()
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 find_package (BSON REQUIRED)
 find_package (Qt5Core REQUIRED)
-find_package (Qt5Network REQUIRED) 
-find_package (Qt5Script REQUIRED) 
+find_package (Qt5Network REQUIRED)
+find_package (Qt5Script REQUIRED)
 find_package (Qt5Concurrent REQUIRED)
 
 set (CMAKE_THREAD_PREFER_PTHREAD  TRUE)
@@ -63,7 +63,7 @@ set (SOFT_PATCH_VERSION 5)
 # Tests
 # Run them with "ctest -V" or "make check" to get verbose output.
 if (WITH_TESTS)
-  enable_testing()  
+  enable_testing()
   add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose -F)
 
 endif (WITH_TESTS)
@@ -100,7 +100,7 @@ if ("${LIB64}" STREQUAL "TRUE")
 else()
   set(LIBSUFFIX "")
 endif()
-set(LIB_INSTALL_DIR lib${LIBSUFFIX} CACHE PATH 
+set(LIB_INSTALL_DIR lib${LIBSUFFIX} CACHE PATH
   "Installation directory for libraries")
 mark_as_advanced(LIB_INSTALL_DIR)
 
@@ -113,40 +113,11 @@ set (SIMUDF_PLUGINS_DIR ${SOFTBASE}/udf)
 set (INCLUDE_INSTALL_DIR include/${PROJECT_NAME})
 
 #####################
-# add_forge 
-# TODO: To be moved to a separate file later
+# add_forge
 #####################
 
-# Run a json entity through the soft-forge code generator to create
-# a header and source file
-function (add_forge entity template_src output_src template_hdr output_hdr)
+include(cmake/add_forge.cmake)
 
-  if ("" STREQUAL "${softshell_APP}")
-    message(FATAL_ERROR "softshell_APP not defined")
-  endif()
-
-  if ("" STREQUAL "${soft-forge_APP}")
-    message(FATAL_ERROR "soft-forge_APP not defined")
-  endif()
-
-  # Note: To force the softshell to be run with the SOFT_MODULES environment variable, CMake has to be invoked
-  #       as a wrapper to the softshell application, using the -E switch.
-  # Note: Dependencies are set up to softshell so that the build order is conserved even when running with a
-  #       multi-processor build such as make -j. This ensures that softshell is built before being attempted
-  #       run by the forge command.
-  add_custom_command(
-    OUTPUT ${output_hdr}
-    COMMAND ${CMAKE_COMMAND} -E env "SOFT_MODULES=${softshell_MODULES_DIR}" ${softshell_APP} ${soft-forge_APP} ${entity} ${template_hdr} ${output_hdr}
-    DEPENDS ${entity} ${C_HEADER_TEMPLATE} softshell ${soft-forge_APP}
-    )
-  
-  add_custom_command(
-    OUTPUT ${output_src}
-    COMMAND ${CMAKE_COMMAND} -E env "SOFT_MODULES=${softshell_MODULES_DIR}" ${softshell_APP} ${soft-forge_APP} ${entity} ${template_src} ${output_src}
-    DEPENDS ${entity} ${C_SOURCE_TEMPLATE} ${output_hdr} softshell ${soft-forge_APP}
-    )
-
-endfunction()
 
 ######################
 # Add subdirectories
@@ -189,9 +160,9 @@ endif (WITH_STORAGE_JSON)
 
 if (WITH_STORAGE_EXTERNAL)
   add_subdirectory(storage/src/plugins/external)
-  if (WITH_TESTS)	
+  if (WITH_TESTS)
     add_subdirectory(storage/test/plugins/external)
-  endif (WITH_TESTS)	
+  endif (WITH_TESTS)
 endif (WITH_STORAGE_EXTERNAL)
 
 # Tools
@@ -232,7 +203,7 @@ endif(WITH_WEB)
 if (WITH_FOREIGN_C)
   if (WITH_TESTS)
     add_subdirectory(foreign/c/test/softc)
-    add_subdirectory(foreign/c/test/storage)	
+    add_subdirectory(foreign/c/test/storage)
   endif (WITH_TESTS)
 endif (WITH_FOREIGN_C)
 
@@ -256,7 +227,7 @@ if (WITH_NUMERICS)
   add_subdirectory(numerics/src/sim)
   if (WITH_TESTS)
     add_subdirectory(numerics/test/sim)
-  endif(WITH_TESTS)  
+  endif(WITH_TESTS)
 endif (WITH_NUMERICS)
 
 if (WITH_PORTO)
@@ -275,7 +246,7 @@ if (WITH_PORTO)
   add_subdirectory(porto/src/xyplot)
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remark-wrapper)
-  
+
  if (WITH_TESTS)
    add_subdirectory(porto/test/json)
    add_subdirectory(porto/test/chemkin)
@@ -283,7 +254,7 @@ if (WITH_PORTO)
 #    add_subdirectory(porto/test/xyplot)
    add_subdirectory(porto/test/thirdParty/chemkinReader)
    add_subdirectory(porto/test/thirdParty/remarcReader)
-   add_subdirectory(porto/test/parscale)  
+   add_subdirectory(porto/test/parscale)
  endif (WITH_TESTS)
 
 endif (WITH_PORTO)
