--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -753,7 +753,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/frontpage.md \
+INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/../README.md \
                          @CMAKE_CURRENT_SOURCE_DIR@/../core \
                          @CMAKE_CURRENT_SOURCE_DIR@/../storage \
 			 @CMAKE_CURRENT_SOURCE_DIR@/../foreign \
