SOFT-114 Fixed issue where library install behaves differently on Windows and Linux. Fixed issue where BSON was too aggressively included in the dependencies, even when not using mongodb or any of the corresponding storages or plugins

--- a/foreign/c/src/softc/CMakeLists.txt
+++ b/foreign/c/src/softc/CMakeLists.txt
@@ -21,8 +21,8 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install (TARGETS ${PROJECT_NAME}
-  LIBRARY DESTINATION ${LIB_INSTALL_DIR})
+#install (TARGETS ${PROJECT_NAME}
+#  LIBRARY DESTINATION ${LIB_INSTALL_DIR})
 
 install(DIRECTORY .
   DESTINATION ${INCLUDE_INSTALL_DIR}/${PROJECT_NAME}
