--- a/storage/src/plugins/external/CMakeLists.txt
+++ b/storage/src/plugins/external/CMakeLists.txt
@@ -24,4 +24,4 @@ set(${PROJECT_NAME}_LIBS
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
+install_runtime_library(${PROJECT_NAME} ${STORAGE_PLUGINS_INSTALL_DIR})
