--- a/tools/src/plugins/soft-kernel/CMakeLists.txt
+++ b/tools/src/plugins/soft-kernel/CMakeLists.txt
@@ -32,4 +32,4 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
+install_runtime_library(${PROJECT_NAME} ${SCRIPT_PLUGINS_INSTALL_DIR})
