--- a/storage/src/plugins/json/CMakeLists.txt
+++ b/storage/src/plugins/json/CMakeLists.txt
@@ -23,4 +23,4 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
+install_runtime_library(${PROJECT_NAME} ${STORAGE_PLUGINS_INSTALL_DIR})
