--- a/core/src/kernel/CMakeLists.txt
+++ b/core/src/kernel/CMakeLists.txt
@@ -8,7 +8,7 @@ set (CMAKE_AUTOMOC ON)
 configure_file("config.h.in" "config.h")
 
 set (LINK_LIBS ${LINK_LIBS}
-  # ${BSON_LIBRARIES} # TODO: It seems this is not needed
+  # ${BSON_LIBRARIES} # TODO: It seems this is not needed for the minimal build
   Qt5::Core
   Qt5::Network
   Qt5::Script
@@ -19,10 +19,14 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 include_directories(
    ${CMAKE_CURRENT_BINARY_DIR}
-   # ${BSON_INCLUDE_DIR} # TODO: It seems this is not needed.
+   # ${BSON_INCLUDE_DIR} # TODO: It seems this is not needed for the minimal build
    )
+
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
+
+# Export/import declaration for Windows
+generate_export_header(${PROJECT_NAME})
 
 # Expose public includes to other subprojects
 set(${PROJECT_NAME}_INCLUDE_DIRS
