SOFT-122 Removed old mongo driver from build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,11 +145,11 @@ endif (WITH_STORAGE_HD5)
 
 if (WITH_STORAGE_MONGO)
   add_subdirectory(storage/src/mongo)
-  add_subdirectory(storage/src/plugins/mongo)
+#  add_subdirectory(storage/src/plugins/mongo)
   add_subdirectory(storage/src/plugins/mongo2)
   if (WITH_TESTS)
     add_subdirectory(storage/test/mongo)
-    add_subdirectory(storage/test/plugins/mongo)
+#    add_subdirectory(storage/test/plugins/mongo)
     add_subdirectory(storage/test/plugins/mongo2)
   endif(WITH_TESTS)
 endif (WITH_STORAGE_MONGO)
