More robust way to find numpy/arrayobject.h

--- a/foreign/python/src/softpy/CMakeLists.txt
+++ b/foreign/python/src/softpy/CMakeLists.txt
@@ -8,9 +8,12 @@ set (CMAKE_AUTOMOC ON)
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
 
+find_package(Numpy REQUIRED)
+
 find_package(PythonLibs REQUIRED)
 include_directories(
-  ${PYTHON_INCLUDE_PATH}
+  ${PYTHON_INCLUDE_DIRS}
+  ${NUMPY_INCLUDE_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${soft-kernel_SOURCE_DIR}
   ${softc_SOURCE_DIR}
