SOFT-114 Added forge for test entity generation. Changed default build settings to the minimal Windows build settings

--- a/core/test/kernel/entities/CMakeLists.txt
+++ b/core/test/kernel/entities/CMakeLists.txt
@@ -12,6 +12,11 @@ foreach(JSON_SRC ${json-sources})
   string(REGEX REPLACE "\.json$" ".c" GEN_SRC ${JSON_SRC})
   string(REGEX REPLACE "\.json$" ".h" GEN_HDR ${JSON_SRC})
 #  message("${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC} - ${GEN_SRC}")
+
+   message("add_forge(${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}
+    ${C_SOURCE_TEMPLATE} ${test-entities_BINARY_DIR}/${GEN_SRC}
+    ${C_HEADER_TEMPLATE} ${test-entities_BINARY_DIR}/${GEN_HDR})")
+
   add_forge(${CMAKE_CURRENT_SOURCE_DIR}/${JSON_SRC}
     ${C_SOURCE_TEMPLATE} ${test-entities_BINARY_DIR}/${GEN_SRC}
     ${C_HEADER_TEMPLATE} ${test-entities_BINARY_DIR}/${GEN_HDR})
