--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.2)
 include(CPack)
 project(soft5)
 
-option (WITH_STORAGE_MONGO "MongoDB storage support"      ON)
-option (WITH_STORAGE_JSON "JSON storage support"          ON)
-option (WITH_STORAGE_EXTERNAL "External storage support"  ON)
-option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   ON)
-option (WITH_FOREIGN_C "Compile with C API"               ON)
-option (WITH_TESTS "Compile tests"                        ON)
+option (WITH_TESTS "Compile tests"                        OFF)
+option (WITH_STORAGE_JSON "JSON storage support"          OFF)
+option (WITH_PLUGIN_SOFT_KERNEL "Compile kernel plugin"   OFF)
+option (WITH_STORAGE_EXTERNAL "External storage support"  OFF)
+option (WITH_FOREIGN_C "Compile with C API"               OFF)
+option (WITH_STORAGE_MONGO "MongoDB storage support"      OFF)
 option (WITH_WEB "Compile with Web support"               OFF)
 option (WITH_HSM "Compile with HSM plugin"                OFF)
 option (WITH_STORAGE_HD5 "HDF5 storage support"           OFF)
