--- a/tools/src/plugins/hsm/CMakeLists.txt
+++ b/tools/src/plugins/hsm/CMakeLists.txt
@@ -7,6 +7,8 @@ set (CMAKE_AUTOMOC                ON)
 include_directories (
   "../common")
 
+# Export/import declaration for Windows
+
 aux_source_directory (. SRC_LIST)
 set (LINK_LIBS ${LINK_LIBS}
   Qt5::Core
@@ -18,8 +20,4 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
-
-install(TARGETS ${PROJECT_NAME}
-  LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR}
-  ARCHIVE DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR}
-)
+install_runtime_library(${PROJECT_NAME} ${SCRIPT_PLUGINS_INSTALL_DIR})
