--- a/tools/src/plugins/mongo/CMakeLists.txt
+++ b/tools/src/plugins/mongo/CMakeLists.txt
@@ -21,4 +21,4 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
-install_runtime_library(${PROJECT_NAME} ${SCRIPT_PLUGINS_INSTALL_DIR)
+install_runtime_library(${PROJECT_NAME} ${SCRIPT_PLUGINS_INSTALL_DIR})
