--- a/tools/src/plugins/mongo/CMakeLists.txt
+++ b/tools/src/plugins/mongo/CMakeLists.txt
@@ -11,7 +11,9 @@ include_directories (
   "../common")
 
 # Export/import declaration for Windows
+if (WIN32)
 generate_export_header(${PROJECT_NAME})
+endif()
 
 set (LINK_LIBS ${LINK_LIBS} ${soft-storage-mongo_LIBS})
 aux_source_directory (. SRC_LIST)
@@ -21,4 +23,10 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
-install_runtime_library(${PROJECT_NAME} ${SCRIPT_PLUGINS_INSTALL_DIR)
+
+if (WIN32)
+install_runtime_library(${PROJECT_NAME} ${SCRIPT_PLUGINS_INSTALL_DIR})
+else ()
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
+endif()
+
