--- a/foreign/python/src/softpy/CMakeLists.txt
+++ b/foreign/python/src/softpy/CMakeLists.txt
@@ -10,7 +10,7 @@ include(${SWIG_USE_FILE})
 if(USE_PYTHON3)
   find_package(PythonInterp 3 REQUIRED)
 else()
-  find_package(PythonInterp REQUIRED)
+  find_package(PythonInterp 2 REQUIRED)
 endif()
 find_package(PythonLibs REQUIRED)
 find_package(Numpy REQUIRED)
