--- a/storage/src/plugins/hdf5/CMakeLists.txt
+++ b/storage/src/plugins/hdf5/CMakeLists.txt
@@ -19,4 +19,6 @@ set(${PROJECT_NAME}_INCLUDE_DIRS
   CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
 
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
+  LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
