--- a/tools/src/plugins/hdf5/CMakeLists.txt
+++ b/tools/src/plugins/hdf5/CMakeLists.txt
@@ -17,4 +17,6 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
+install(TARGETS ${PROJECT_NAME}
+  LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR}
+  ARCHIVE DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
