--- a/foreign/python/src/softpy/CMakeLists.txt
+++ b/foreign/python/src/softpy/CMakeLists.txt
@@ -29,8 +29,9 @@ set(SWIG_MODULE_softpy_EXTRA_DEPS
   numpy.i
   softpy.i
   softpy-typemaps.i
-  softpy-datamodel.i
   softpy-string.i
+  softpy-string-list.i
+  softpy-datamodel.i
   softpy-entity.i
   softpy-collection.i
   softpy-python.i
