Fixed several issues with Python collections

--- a/foreign/python/src/softpy/CMakeLists.txt
+++ b/foreign/python/src/softpy/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SWIG_MODULE_softpy_EXTRA_DEPS
   numpy.i
   softpy.i
   softpy-typemaps.i
+  softpy-bytearray.i
   softpy-string.i
   softpy-string-list.i
   softpy-datamodel.i
