Specified required hdf5 component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if (WITH_PLUGIN_HD5 OR WITH_STORAGE_HD5)
       ${SOFT_DEPS_PREFIX})
     set(HDF5_ROOT ${SOFT_DEPS_PREFIX})
     find_package(HDF5 REQUIRED
+      COMPONENTS C
       HINTS ${SOFT_DEPS_PREFIX}
       PATHS ${SOFT_DEPS_PREFIX}/share/cmake
       NO_CMAKE_SYSTEM_PATH
