--- a/storage/src/plugins/external/CMakeLists.txt
+++ b/storage/src/plugins/external/CMakeLists.txt
@@ -24,4 +24,8 @@ set(${PROJECT_NAME}_LIBS
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 
-install_runtime_library(${PROJECT_NAME} ${STORAGE_PLUGINS_INSTALL_DIR})
+install(TARGETS ${PROJECT_NAME}
+  LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
+  ARCHIVE DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR}
+)
+
