SOFT-90 Added capability to read parscale .json files into entities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -361,6 +361,7 @@ if (WITH_PORTO)
   add_subdirectory(porto/src/xyplot)
   add_subdirectory(porto/src/dft-prepare)
   add_subdirectory(porto/src/remark-wrapper)
+  add_subdirectory(porto/src/parscale-effectiveness-factor)
 
  if (WITH_TESTS)
    add_subdirectory(porto/test/json)
