--- a/foreign/python/test/softpy/CMakeLists.txt
+++ b/foreign/python/test/softpy/CMakeLists.txt
@@ -10,6 +10,9 @@ if(PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
 
   set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+  # Define PYTHONPATH
+  get_filename_component(PYTHONPATH ${softpy_BINARY_DIR} DIRECTORY)
+
   add_test(${PROJECT_NAME}
     ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/softpy-test.py)
 
@@ -26,7 +29,7 @@ if(PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
     ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:$ENV{SOFTSTORAGE}")
 
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
-    ENVIRONMENT "PYTHONPATH=${softpy_BINARY_DIR}:$ENV{PYTHONPATH}")
+    ENVIRONMENT "PYTHONPATH=${PYTHONPATH}:$ENV{PYTHONPATH}")
 
 else()
   message("Python not found - skipping tests")
